# sentinel-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/mcp_agent/: agent.py  config.py  edges.py  nodes.py  state.py
src/mcp_agent/tools/: mcp_client.py  server.py
