[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-agent"
version = "0.1.0"
description = "Production-grade LangGraph agent with Databricks inference and MCP tool integration"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]

keywords = ["langgraph", "mcp", "databricks", "llm", "agent", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ── LangChain / LangGraph ────────────────────────────────────────────────
    "langchain>=0.3.0,<0.4",
    "langchain-core>=0.3.0,<0.4",
    "langgraph>=0.2.0,<0.3",
    "langchain-databricks>=0.1.0",
    "langchain-mcp-adapters>=0.1.0",

    # ── Configuration ────────────────────────────────────────────────────────
    "pydantic>=2.7.0,<3",
    "pydantic-settings>=2.3.0,<3",
    "pyyaml>=6.0",

    # ── MCP ──────────────────────────────────────────────────────────────────
    "mcp>=1.0.0",
    "httpx>=0.27.0",

    # ── Schema validation ────────────────────────────────────────────────────
    "jsonschema>=4.22.0",

    # ── Observability ────────────────────────────────────────────────────────
    "mlflow>=2.14.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
]

[project.optional-dependencies]
dev = [
    # ── Testing ──────────────────────────────────────────────────────────────
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-xdist>=3.5.0",     # parallel test execution

    # ── Linting / formatting ──────────────────────────────────────────────────
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.22.0",

    # ── Dev utilities ─────────────────────────────────────────────────────────
    "ipykernel>=6.29.0",       # notebook exploration
    "rich>=13.7.0",            # pretty CLI output
]

[project.scripts]
mcp-agent = "mcp_agent.__main__:main"

[project.urls]
Homepage = "https://github.com/your-org/databricks-langgraph-mcp"
Repository = "https://github.com/your-org/databricks-langgraph-mcp"
Issues = "https://github.com/your-org/databricks-langgraph-mcp/issues"

# ── Hatchling build config ─────────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/mcp_agent"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SLF", # flake8-self (private member access)
    "BLE", # flake8-blind-except
    "PLW", # Pylint warnings
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",    # line length — handled by formatter
    "B008",    # do not perform function calls in default args (pydantic Field)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["SLF001", "BLE001"]  # tests legitimately access private members

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/"]

# ── pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "eval: marks tests as evaluation tests requiring live credentials",
]

# ── Coverage ───────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/mcp_agent"]
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]